--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,22 @@
     background-clip: text; 
     -webkit-background-clip: text; 
   }
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #2d2d2d; 
+  border-radius: 8px; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #5a5a5a; 
+  border-radius: 8px; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #7a7a7a; 
+}
